--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
         "build": "npx webpack -p --mode production"
     },
     "dependencies": {
+        "axios": "^0.21.0",
+        "bootstrap": "^4.5.3",
         "core-js": "^3.1.4",
         "react": "^16.8.6",
+        "react-bootstrap": "^1.4.0",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
-        "regenerator-runtime": "^0.13.2"
+        "regenerator-runtime": "^0.13.2",
+        "simple-react-validator": "^1.6.0"
     },
     "devDependencies": {
         "@babel/core": "^7.7.0",
